# MoZuku

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
docs/: setup-global-install.md
mozuku-lsp/: CMakeLists.txt
mozuku-lsp-py/: README.md  pyproject.toml
mozuku-lsp-py/mozuku_lsp/: __init__.py  analyzer.py  comment_extractor.py  grammar_checker.py  server.py  wikipedia.py
mozuku.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
patches/: cabocha_win_fix.patch
vscode-mozuku/: build-lsp.js  package-lock.json  package.json
vscode-mozuku/src/: client.ts
